2007-12-17  Andy Wingo  <wingo@pobox.com>

	* gst/switch/gstswitch.h (struct _GstStreamSelectorClass): Fix
	vmethod prototypes.

	* gst/switch/gstswitch.c (gst_stream_selector_class_init)
	(gst_stream_selector_block, gst_stream_selector_switch): Add empty
	vmethod definitions. Patch 3/12.

	* gst/switch/gstswitch.h (struct _GstStreamSelectorClass): 
	* gst/switch/gstswitch.c (gst_stream_selector_class_init): Add
	`block' and `switch' signals.

	* gst/switch/Makefile.am: 
	* gst/switch/gstswitch-marshal.list: Add foo to generate a
	marshaller for the `switch' signal. Patch 2/12.

	* gst/switch/gstswitch.h: 
	* gst/switch/gstswitch.c: Replace with files from
	gststreamselector.[ch], registered as the "switch" plugin, with
	"GstSwitch" types. Patch 1/12.

2007-12-17  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/TODO:
	* ext/metadata/gstmetadatademux.c:
	* ext/metadata/metadata.c:
	* ext/metadata/metadata.h:
	* ext/metadata/metadataparsejpeg.c:
	* ext/metadata/metadataparsejpeg.h:
	* ext/metadata/metadataparsepng.c:
	* ext/metadata/metadataparsepng.h:
	* ext/metadata/test/MetadataEditorMain.glade:
	* ext/metadata/test/metadata_editor.c:
	  Added "parse-only" property to metadatademux.

2007-12-16  David Schleef  <ds@schleef.org>

	* sys/glsink/glimagesink.c:
	* sys/glsink/glimagesink.h:
	* sys/glsink/glvideo.c:
	* sys/glsink/glvideo.h:
	  Rename GLVideo* to GstGL*.

2007-12-15  David Schleef  <ds@schleef.org>

	* sys/glsink/Makefile.am:
	* sys/glsink/glextensions.c:
	* sys/glsink/glextensions.h:
	* sys/glsink/glvideo.c:
	  Add vblank synchronization.  Isn't really working on my
	  driver. :(

2007-12-15  David Schleef  <ds@schleef.org>

	* sys/glsink/Makefile.am:
	* sys/glsink/glimagesink.c:
	* sys/glsink/glvideo.c:
	* sys/glsink/glvideo.h:
	* sys/glsink/gstvideo-common.c:
	* sys/glsink/gstvideo-common.h:
	  Add support for xRGB, xBGR, and AYUV.  Re-add support for
	  power-of-2 textures.

2007-12-15  Sebastian Dröge  <slomo@circular-chaos.org>
